--- a/keycloak-sso.yaml
+++ b/keycloak-sso.yaml
@@ -1,6 +1,5 @@
 enabled: true
-text_var: Custom Text added by the **Keycloak Sso** plugin (disable plugin to remove)
-
 server:
 client_id:
 client_secret:
+editors:
